--- a/FINAL FINAL WALLAH FINAL PROJECT/Final project/Base.lproj/Main.storyboard
+++ b/FINAL FINAL WALLAH FINAL PROJECT/Final project/Base.lproj/Main.storyboard
@@ -334,6 +334,7 @@
                                 <rect key="frame" x="20" y="736" width="69" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
+                                    <action selector="sendEmail:" destination="PDQ-2x-eCs" eventType="touchUpInside" id="cgD-i2-dmY"/>
                                     <segue destination="6Hj-ZD-JYG" kind="show" id="UUo-Yr-eaU"/>
                                 </connections>
                             </button>
@@ -361,46 +362,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="sendMail" translatesAutoresizingMaskIntoConstraints="NO" id="G2z-Qr-O62">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="sendMail" translatesAutoresizingMaskIntoConstraints="NO" id="G2z-Qr-O62">
                                 <rect key="frame" x="0.0" y="24" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sPJ-fE-cfw">
-                                <rect key="frame" x="64" y="246" width="284" height="160"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ox3-9X-B5R">
+                                <rect key="frame" x="164" y="448" width="67" height="62"/>
+                                <connections>
+                                    <action selector="sendMail:" destination="6Hj-ZD-JYG" eventType="touchUpInside" id="byM-QD-rka"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Subject" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kTc-ov-er9">
+                                <rect key="frame" x="66" y="159" width="276" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zYe-K7-4CV">
+                                <rect key="frame" x="77" y="238" width="265" height="168"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ox3-9X-B5R">
-                                <rect key="frame" x="164" y="448" width="67" height="62"/>
-                                <connections>
-                                    <action selector="sendmail2:" destination="6Hj-ZD-JYG" eventType="touchUpInside" id="BhA-qo-8j6"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="subject" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSy-q2-Jgf">
-                                <rect key="frame" x="59" y="157" width="296" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="cSy-q2-Jgf" firstAttribute="centerX" secondItem="sPJ-fE-cfw" secondAttribute="centerX" id="1RH-Yk-eoW"/>
-                            <constraint firstItem="cSy-q2-Jgf" firstAttribute="top" secondItem="NMp-Po-up9" secondAttribute="top" constant="95" id="CN0-ea-au4"/>
-                            <constraint firstItem="sPJ-fE-cfw" firstAttribute="top" secondItem="cSy-q2-Jgf" secondAttribute="bottom" constant="44" id="Ds6-YZ-rxp"/>
-                            <constraint firstItem="sPJ-fE-cfw" firstAttribute="leading" secondItem="NMp-Po-up9" secondAttribute="leading" constant="67" id="HeF-RO-K8m"/>
-                            <constraint firstItem="ox3-9X-B5R" firstAttribute="top" secondItem="sPJ-fE-cfw" secondAttribute="bottom" constant="47" id="RjM-no-m7N"/>
                             <constraint firstItem="ox3-9X-B5R" firstAttribute="leading" secondItem="NMp-Po-up9" secondAttribute="leading" constant="149" id="SBs-XD-Wca"/>
-                            <constraint firstItem="NMp-Po-up9" firstAttribute="trailing" secondItem="cSy-q2-Jgf" secondAttribute="trailing" constant="63" id="au2-Ba-MmI"/>
                             <constraint firstItem="ox3-9X-B5R" firstAttribute="centerY" secondItem="LnF-Ei-GMB" secondAttribute="centerY" id="d8i-Al-7EG"/>
-                            <constraint firstItem="cSy-q2-Jgf" firstAttribute="leading" secondItem="NMp-Po-up9" secondAttribute="leading" constant="55" id="ssQ-p0-sOf"/>
+                            <constraint firstItem="G2z-Qr-O62" firstAttribute="centerX" secondItem="LnF-Ei-GMB" secondAttribute="centerX" id="eyk-qk-Gcn"/>
+                            <constraint firstItem="G2z-Qr-O62" firstAttribute="top" secondItem="LnF-Ei-GMB" secondAttribute="topMargin" constant="-64" id="wp9-gv-saa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NMp-Po-up9"/>
                     </view>
                     <navigationItem key="navigationItem" id="a6T-Dl-a8T"/>
                     <connections>
-                        <outlet property="body" destination="sPJ-fE-cfw" id="0sB-Jp-WTb"/>
-                        <outlet property="subject" destination="cSy-q2-Jgf" id="pa0-Lp-qu4"/>
+                        <outlet property="body" destination="zYe-K7-4CV" id="3ck-c7-jXD"/>
+                        <outlet property="subject" destination="kTc-ov-er9" id="6O1-Ve-vqZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WAj-4h-WU0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
